apps/synapse/ingress-route-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: matrix-federation
  namespace: synapse
spec:
  entryPoints:
    - matrix-federation
  routes:
    - match: HostSNI(`matrix.sakul-flee.de`)
      services:
        - name: synapse-matrix-synapse
          port: 8008
          namespace: synapse
